--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.15"
+    "@types/react-dom": "^17.0.15",
+    "@types/styled-components": "^5.1.25"
   },
   "scripts": {
     "start": "react-scripts start",
