--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "composite": true,
-    "noEmit": false,
+    "noEmit": true,
     "jsx": "react-jsx"
-  }
+  },
+  "include": [],
+  "exclude": [
+    "node_modules"
+  ]
 }
